v3.6.5 (XXXX-XX-XX)
-------------------

* Updated arangosync to 0.7.7.

* Fixed a document parsing bug in the Web UI. This issue occured in the
  document list view in case a document had an attribute called `length`.
  The result was an incorrect representation of the document preview.

* The Web UI now displays an error message inside the node information view in
  case the user has no access to retreive the neccessary information.

* Fixed a potential agency crash if trace logging is on.

* Add more context error messages in certain agency failure situations in
  debug/trace mode.

* Fixed issue OASIS-252: Hotbackup agency locks without clientId.

* Correct some log entries.

* Fixed BTS-110: Fulltext index with minLength <= 0 not allowed.

* Web UI: Removed unnecessary menubar entry in case of database node inspection.

* The `_from` and `_to` attributes of an edge document can now be edited from
  within the UI.

* Disallow using V8 dependent functions in SEARCH statement.

* Fixed issue ES-609: "Transaction already in use" error when running
  transaction.
  Added option `--transaction.streaming-lock-timeout` to control the timeout in
  seconds in case of parallel access to a streaming transaction.

* Removed the edge id's hover styling in case of embedded document editor in
  the Web UI as this functionality is disabled. This was misleading because
  the elements are not clickable.

* In case a document got requested via the UI of a collection which does not
  exist, the UI now properly displays an error view instead of having a bad
  display state.

* The Web UI is not disabling the query import button after file upload takes
  place.

* In case of a graph deletion failure, the Web UI displays now the correct
  error message.

* Fix undistribute-remove-after-enum-coll which would allow calculations to be
  pushed to a DBServer which are not allowed to run there.

* Returned `AQL_WARNING()` to emit warnings from UDFs.
