@@ -575,7 +575,7 @@ void HeartbeatThread::getNewsFromAgencyForCoordinator() {
     if (!_server.isStopping()) {
       LOG_TOPIC("539fc", WARN, Logger::HEARTBEAT)
           << "Heartbeat: Could not read from agency! status code: " << result._statusCode
-          << ", incriminating body: " << result.bodyRef() << ", timeout: " << timeout;
+          << ", incriminating body: " << result.body() << ", timeout: " << timeout;
     }
   } else {
     VPackSlice agentPool = result.slice()[0].get(".agency");
@@ -803,7 +803,7 @@ void HeartbeatThread::runSingleServer() {
         if (!_server.isStopping()) {
           LOG_TOPIC("229fd", WARN, Logger::HEARTBEAT)
               << "Heartbeat: Could not read from agency! status code: "
-              << result._statusCode << ", incriminating body: " << result.bodyRef()
+              << result._statusCode << ", incriminating body: " << result.body()
               << ", timeout: " << timeout;
         }
 
